--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                  <p align="right"> <font color="pink" size="1" face="Arial"> :( smutek</font> </p> <br>
                  <p align="right"> <font color="blue" size="2" face="Arial"> ;( duży smutek</font> </p> <br>
                  <p align="right"> <font color="green" size="3" face="Arial"> :D duży uśmiech</font> </p> <br>
-                 <p align="right"> <font color="red" size="4" face="Arial"> :) uśmiech</font> </p> <br>
+                 <p align="right"> <font color="orange" size="4" face="Arial"> :) uśmiech</font> </p> <br>
                  <p align="right"> <font color="purple" size="5" face="Arial"> ;) uśmiech z oczkiem</font> </p> <br>
                  <p align="right"> <font color="black" size="6" face="Arial"> :/ normalna twarz</font> </p> <br>
 
-                 <p align="right"> <font color="red" size="4" face="Verdana"> <strike>80-188</strike> Gdańsk Pilotów 2  </font> </p> <br>
+                 <p align="right"> <font color="yellow" size="4" face="Verdana"> <strike>80-188</strike> Gdańsk Pilotów 2  </font> </p> <br>
                  <p align="left"> <font color="orange" size="4" face="Times New Roman"> Ulubiony aktor:<u>The Rock</u> </font> </p> <br>
                  <p align="center"> <font color="blue" size="6" face="Courier New"> Ulubiony zespół muzyczny:<b>Mesh</b> </font> </p> <br>
                  <p align="center"> <font color="green" size="5" face="Arial"> <i>Data Urodzenia: 28 lutego 2002</i> </font> </p> <br>
