--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                            </OL>
                            </OL>
                               </OL>
+		      <A HREF="poczta_pieczurczyk.html"> Tutaj jest link do mojego maila </A><br>
+							  <A href ="zip.zip">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A><br>
+							  <a name="skok_poczatek"></a>
+							  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>
 						 
 						  
               </body>
