--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
                            </OL>
                            </OL>
                               </OL>
-		      <A HREF="poczta_pieczurczyk.html"> Tutaj jest link do mojego maila </A><br>
-							  <A href ="zip.zip">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A><br>
-							  <a name="skok_poczatek"></a>
-							  <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>
+		       <A HREF="poczta_pieczurczyk.html"> Tutaj jest link do mojego maila </A><br>
+		       <A HREF="plik_pieczurczyk.html"> Tutaj jest plik do pobrania</A><br>
+							 <A HREF="index.html"> wroc do poczatku </A>
+							 <a name="skok_poczatek"></a> 
+							 <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>
 						 
 						  
               </body>
