--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							  <A HREF="plik_pieczurczyk.html"> Tutaj jest plik do pobrania</A><br>
 							 <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a><br>
 							 <a name="skok_koniec"></a><br>
-							 <a href="#skok_srodek">kliknij aby skoczyć na srodek tekstu</a><br>
+							 <a href="#skok_srodek">kliknij aby skoczyć do srodka tekstu</a><br>
 							 <A HREF="tabela_pieczurczyk.html"> Tutaj bedzie tabela</A><br>
 							 <A HREF="formularz_pieczurczyk.html"> Tutaj bedzie formularz</A><br>
 								
