--- a/poczta_pieczurczyk.html
+++ b/poczta_pieczurczyk.html
@@ -8,7 +8,7 @@
 <body>
 
 <A href ="mailto:damianpieczurczyk@gmail.com"><img src="poczta.gif" border=0 width=70 height=50>poczta do mnie</A><br>
-<A HREF="index.html"> wroc </A>
+<A HREF="index.html"> wróć </A>
 </body>
 </html>
 <sub></sub>
