--- a/plik_pieczurczyk.html
+++ b/plik_pieczurczyk.html
@@ -8,7 +8,7 @@
 <body>
 
 <A href ="zip.zip">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby sciagnac plik</A><br>
-<A HREF="index.html"> wroc </A>
+<A HREF="index.html"> wróć </A>
 </body>
 </html>
 <sub></sub>
