--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-      <html> lang="pl-PL"
+      <html lang="pl-PL">
       <html>
              <head>
 			 <a name="skok_poczatek"></a>
