--- a/tabela_pieczurczyk.html
+++ b/tabela_pieczurczyk.html
@@ -1,12 +1,86 @@
 <!DOCTYPE html>
-      <html lang="pl-PL">
 <html>
-             <head>
-<meta charset="utf-8">
-               </head>
-
+<head>
+<meta charset="UTF-8">
+<title>Tabela HTML wykonanie Kowalski 2Fg1</title>
+</head>
 <body>
-tu bedzie tabela<br>
+<table style="border:6px solid red;border-collapse: collapse;">
+<!—szerokość obramowania 6px dla tabeli, styl obramowania -->
+<caption>Tabela</caption>
+<!—tytuł tabeli -->
+<thead>
+<tr style="background-color: #e5eb34;">
+<!—obramowanie wiersza -->
+<td colspan="5" VALIGN=CENTER ALIGN=CENTER>WYDAJNOŚĆ KART GRAFICZNYCH W GRACH Z PROCESOREM INTEL I5 <br>
+– PIECZURCZYK DAMIAN 1P</td>
+</tr>
+</thead>
+<tbody>
+<tr style="font-family: Arial;font-size: 22px;">
+<tr style="background-color: #f5d64e;">
+<!—zdefiniowanie rodzaju czcionki oraz jej wielkości -->
+<td>Karta Graficzna</td>
+<td>Cs Go</td>
+<td>Valorant</td>
+<td>R6</td>
+<td>Fortnite</td>
+</tr>
+<tr style="background-color: #e6c949;">
+<!—kolor czcionki oraz jej pogrubienie -->
+<td style="color: RED;font-weight: bold;">GTX 970</td>
+<!—obramowanie jednej komórki -->
+<td style="color: #337a91;">240 fps</td>
+<TH ROWSPAN=2 ALIGN=CENTER style="color: #459431;">130 fps </TH>
+<td style="color: #55118c;">100 fps</td>
+<TH ROWSPAN=2 ALIGN=CENTER style="color: #916820;">110 fps </TH>
+</tr>
+<tr style="background-color: #d1b743;">
+<!—tło wiersza -->
+<td style="color: RED;font-weight: bold;">GTX 1060</td>
+<td style="color: #59cbf0;">300 fps</td>
+<td style="color: #6516a6;">180 fps</td>
+
+
+</tr>
+<tr style="background-color: #bfa73d;">
+<!—tło wiersza -->
+<td style="color: RED;font-weight: bold;">GTX 1650</td>
+<td style="color: #216175;">350 fps</td>
+<td style="color: #4db334;">160 fps</td>
+<td style="color: #6d23a8;">210 fps</td>
+<td style="color: #916820;">140 fps</td>
+</tr>
+<tr style="background-color: #a38f34;">
+<!—tło wiersza -->
+<td style="color: RED;font-weight: bold;">GTX 1660</td>
+<td style="color: #1e718a;">350 fps</td>
+<td style="color: #51c234;">270 fps</td>
+<td style="color: #8023a8;">260 fps</td>
+<td style="color: #a37627;">166 fps</td>
+</tr>
+<tr style="background-color: #918030;">
+<!—tło wiersza -->
+<td style="color: RED;font-weight: bold;">RTX 2070</td>
+<td style="color: #0e86ab;">370 fps</td>
+<td style="color: #59e336;">300 fps</td>
+<td style="color: #912bbd;">330 fps</td>
+<td style="color: #ba862d;">213 fps</td>
+</tr>
+<tr style="background-color: #82732a;">
+<!—tło wiersza -->
+<td style="color: RED;font-weight: bold;">RTX 3060</td>
+<td style="color: #438ba1;">400 fps</td>
+<td style="color: #4cfa20;">400 fps</td>
+<td style="color: #c241fa;">354 fps</td>
+<td style="color: #e0a236;">300 fps</td>
+</tr>
+<tr style="background-color: #e5eb34;">
+<!—tło wiersza -->
+<td colspan="5"VALIGN=CENTER ALIGN=CENTER>Wydajność Kart Graficznych W Grach</td>
+</tr>
+</tbody>
+</table>
 <A HREF="index.html"> wróć </A>
 </body>
 </html>
