--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							 <a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a><br>
 							 <a name="skok_koniec"></a><br>
 							 <a href="#skok_srodek">kliknij aby skoczyć do srodka tekstu</a><br>
-							 <A HREF="tabela_pieczurczyk.html"> Tutaj bedzie tabela</A><br>
+							 <A HREF="tabela_pieczurczyk.html"> Tutaj jest tabela</A><br>
 							 <A HREF="formularz_pieczurczyk.html"> Tutaj bedzie formularz</A><br>
 							 
 								<IMG SRC="blad_pieczurczyk_uczen.png" ALIGN=center BORDER=1 WIDTH=300 HEIGHT=400 ALT="blad_pieczurczyk_uczen"> <br>
