--- a/formularz_pieczurczyk.html
+++ b/formularz_pieczurczyk.html
@@ -1,12 +1,86 @@
 <!DOCTYPE html>
-      <html lang="pl-PL">
+<html lang="pl-PL">
 <html>
-             <head>
+<head>
+    
 <meta charset="utf-8">
-               </head>
+<title> ZADANIE FORMULARZ </title>
+</head>
+<body bgcolor="white">
+<center><h1> Formularz do zapisania sie na turnieje gier</h1></center>
+ <form>
 
-<body>
-tu bedzie formulasz<br>
+<input type="text" id="imie">&nbsp &nbsp &nbsp
+<input type="text" id="drugie_imie" name="drugie-imie">&nbsp &nbsp &nbsp
+<input type="text" id="nazwisko" name="nazwisko">&nbsp &nbsp &nbsp
+ 
+  <select>
+    <option value="13">13</option>
+    <option value="14">14</option>
+    <option value="15">15</option>
+    <option value="16">16</option>
+    <option value="17">17</option>
+    <option value="18+">18+</option>
+    </select> 
+</form> 
+ <label for="imie">imię:</label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<label for="drugie-imie">Drugie imię:</label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <label for="nazwisko">Nazwisko:</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Wiek
+ <br><br><br>
+<label for="miejscowosc">Gdzie Mieszkasz</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <label for="imie">Jaka gra cie interesuje</label><br><br>
+    <input type="checkbox" name="kontynet" value="Europa"> Europa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+    <input type="checkbox" name="gra" value="cs_2"> Cs 2         
+    <br><br>
+    <input type="checkbox" name="kontynet" value="Azja"> Azja &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+    <input type="checkbox" name="gra" value="cs_2"> Fc 24
+    <br><br>
+    <input type="checkbox" name="kontynet" value="AmerykaP"> Ameryka Północna &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp
+    <input type="checkbox" name="gra" value="cs_2"> League Of Legends
+    <br><br>
+    <input type="checkbox" name="kontynet" value="AmerykaPo"> Ameryka Południowa &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp
+    <input type="checkbox" name="gra" value="cs_2"> Valorant 
+    <br><br>
+    <input type="checkbox" name="kontynet" value="Afryka"> Afryka &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+    <input type="checkbox" name="gra" value="cs_2"> Fortnite 
+    <br><br><br><br>
+    <label for="miejscowosc">Czy masz jakieś Doświadczenie</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <label for="imie">Jak oceniasz swoje umiejętności</label><br><br>
+    <input type="checkbox" name="doswiadczenie" value="Tak">Tak &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+    <input type="checkbox" name="umiejetnosci" value="Tak">Bardzo dobre
+    <br><br>
+    <input type="checkbox" name="doswiadczenie" value="Nie">Nie &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+    <input type="checkbox" name="umiejetnosci" value="Tak">Dobre
+    <br><br>
+    <input type="checkbox" name="doswiadczenie" value="TakAle">Tak, ale nie w esporcie &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+    <input type="checkbox" name="umiejetnosci" value="Tak">Średnie 
+    <br><br>
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+    <input type="checkbox" name="umiejetnosci" value="Tak">Słabe
+    <br><br><br>
+    <label for="miejscowosc">Czy masz sprzęt gamingowy?</label> <br> <br>
+    <input type="checkbox" name="doswiadczenie" value="Tak">Tak	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+	Jak oceniasz wydajność twojego komputera
+    <br><br>
+    <input type="checkbox" name="doswiadczenie" value="Nie">Nie &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+	<textarea cols="50" rows="4"></textarea> </TD>	
+<br><br><br>
+    <label for="miejscowosc">Dostepne turnieje</label> <br><select>
+        <option value="fortnite">19.11.2023(fortnite)</option>
+        <option value="cs 2">05.12.2023(cs 2)</option>
+        <option value="Fc 24">21.10.2023(Fc 24)</option>
+        <option value="valorant">14.01.2024(valorant)</option>
+        <option value="League of legends">10.11.2023(LOL)</option>
+        <option value="cs 2">25.10.2023(cs 2)</option>
+        </select>
+        <br><br>
+        <label for="miejscowosc">Hasło do formularza:</label><br>
+        <input type="text" id="imie">
+        <br><br>
+        <TD><button onclick="alert('wysylanie kopii na twojego maila')" style="height:50px;width:200px">Wyslij kopie formularza na mojego maila</button></TD>
+<br><br>
+<TD><button onclick="alert('przekierowywanie na strone supportu')" style="height:50px;width:200px">Pomoc</button></TD>
+<br><br><br><br>
+<TD><nobr><input type="reset" value="Reset" style="height:50px; width:200px"> </TD> &nbsp  &nbsp  &nbsp  &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <TD> <input type="submit" value"=Wyślij formularz" style="height:80px; width:150px"> </TD>
+    </TABLE>
+</form>
+
 <A HREF="index.html"> wróć </A>
 </body>
 </html>
