--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 							 <a name="skok_koniec"></a><br>
 							 <a href="#skok_srodek">kliknij aby skoczyć do srodka tekstu</a><br>
 							 <A HREF="tabela_pieczurczyk.html"> Tutaj jest tabela</A><br>
-							 <A HREF="formularz_pieczurczyk.html"> Tutaj bedzie formularz</A><br>
+							 <A HREF="formularz_pieczurczyk.html"> Tutaj jest formularz</A><br>
+		      					<A HREF="glowny_pieczurczyk.html"> iframe</A><br>
+
 							 
 								<IMG SRC="blad_pieczurczyk_uczen.png" ALIGN=center BORDER=1 WIDTH=300 HEIGHT=400 ALT="blad_pieczurczyk_uczen"> <br>
 								<IMG SRC="html5.png" ALIGN=left BORDER=1 WIDTH=500 HEIGHT=500 ALT="html5">
