--- a/glowny_pieczurczyk.html
+++ b/glowny_pieczurczyk.html
@@ -35,21 +35,14 @@
 <td width=18% align="center">
 <b>prawe menu</b>
 <ul>
-<li>
-<a href="plik_pieczurczyk.html">kliknij, aby ściągnąć plik</a>
-</li>
-<li>
-<a href="tabela_pieczurczyk.html" target="obszar_glowny">kliknij, aby zobaczyć tabelę</a>
-</li>
-<li>
-<a href="formularz_pieczurczyk.html" target="obszar_glowny">kliknij, aby zobaczyć formularz</a>
-</li>
-<li>
-<a href="poczta_pieczurczyk.html">kliknij, aby wysłać pocztę</a>
-</li>
-<li>
-<a href="index.html" target="obszar_glowny">kliknij, aby zadania od Z1do Z6</a>
-</li>
+<map id="mapa_kowalski">
+<area shape="circle" coords="25,5,70,48" href="zip.zip">
+<area shape="rect" coords="9,55,86,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
+<area shape="circle" coords="24,102,68,145" href="formularz_pieczurczyk.html" target="obszar_glowny">
+<area shape="rect" coords="5,160,87,191" href="mailto:damianpieczurczyk@gmail.com">
+<area shape="circle" coords="24,215,72,264" href="index.html" target="obszar_glowny">
+</map>
+<img src="mapa.png" alt="tutaj wybieraj linki" usemap="#mapa_kowalski">
 </ul>
 </td>
 
