--- a/glowny_pieczurczyk.html
+++ b/glowny_pieczurczyk.html
@@ -7,6 +7,7 @@
 <tr>
 <td colspan="3">
 <iframe scrolling="no" width=900 height=100 name="obszar_logo" src="logo_pieczurczyk.html" border="0"></iframe>
+<img src="logo_zadanie_15_nazwisko_ucznia.png" border=1 align=left>
 </td>
 </tr>
 <tr>
@@ -23,7 +24,7 @@
 <a href="https://www.edu.gdansk.pl/" target="obszar_glowny">Gpe</a>
 </li>
 <li>
-<a href="https://www.gazetaprawna.pl/" target="obszar_glowny">gazeta</a>
+<a href="https://www.fortnite.com/" target="obszar_glowny">fortnite</a>
 </li>
 </ul>
 
@@ -36,8 +37,8 @@
 <b>prawe menu</b>
 <ul>
 <map id="mapa_kowalski">
-<area shape="circle" coords="25,5,70,48" href="zip.zip">
-<area shape="rect" coords="9,55,86,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
+<area shape="circle" coords="25,5,70,49" href="zip.zip">
+<area shape="rect" coords="9,54,86,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
 <area shape="circle" coords="24,102,68,145" href="formularz_pieczurczyk.html" target="obszar_glowny">
 <area shape="rect" coords="5,160,87,191" href="mailto:damianpieczurczyk@gmail.com">
 <area shape="circle" coords="24,215,72,264" href="index.html" target="obszar_glowny">
