--- a/logo_pieczurczyk.html
+++ b/logo_pieczurczyk.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+<img src="logo_zadanie_15_Pieczurzcyk.png" border=1 align=left>
 <center><h1>LOGO-Pieczurczyk</h1><center>
 <center><h2>Gdańsk, 27-10-2023</h2><center>
 </body>
