--- a/glowny_pieczurczyk.html
+++ b/glowny_pieczurczyk.html
@@ -34,23 +34,14 @@
 </td>
 <td width=18% align="center">
 <b>prawe menu</b>
-<ul>
-<li>
-<a href="plik_pieczurczyk.html">kliknij, aby ściągnąć plik</a>
-</li>
-<li>
-<a href="tabela_pieczurczyk.html" target="obszar_glowny">kliknij, aby zobaczyć tabelę</a>
-</li>
-<li>
-<a href="formularz_pieczurczyk.html" target="obszar_glowny">kliknij, aby zobaczyć formularz</a>
-</li>
-<li>
-<a href="poczta_pieczurczyk.html">kliknij, aby wysłać pocztę</a>
-</li>
-<li>
-<a href="index.html" target="obszar_glowny">kliknij, aby zadania od Z1do Z6</a>
-</li>
-</ul>
+  <map id="mapa_kowalski">
+<area shape="circle" coords="24,6,70,45" href="plik_pieczurczyk.html">
+<area shape="rect" coords="9,54,87,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
+<area shape="circle" coords="22,102,68,147" href="formularz_pieczurczyk.html" target="obszar_glowny">
+<area shape="rect" coords="3,160,87,190" href="poczta_pieczurczyk.html">
+<area shape="circle" coords="22,217,79,262" href="index.html" target="obszar_glowny">
+</map>
+
 </td>
 
 </tr>
