--- a/glowny_pieczurczyk.html
+++ b/glowny_pieczurczyk.html
@@ -34,7 +34,7 @@
 </td>
 <td width=18% align="center">
 <b>prawe menu</b>
-  <map id="mapa_kowalski">
+  <map id="mapa.png">
 <area shape="circle" coords="24,6,70,45" href="plik_pieczurczyk.html">
 <area shape="rect" coords="9,54,87,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
 <area shape="circle" coords="22,102,68,147" href="formularz_pieczurczyk.html" target="obszar_glowny">
