--- a/glowny_pieczurczyk.html
+++ b/glowny_pieczurczyk.html
@@ -34,14 +34,14 @@
 </td>
 <td width=18% align="center">
 <b>prawe menu</b>
-  <map id="mapa.png">
+  <map id="mapa">
 <area shape="circle" coords="24,6,70,45" href="plik_pieczurczyk.html">
 <area shape="rect" coords="9,54,87,92" href="tabela_pieczurczyk.html" target="obszar_glowny">
 <area shape="circle" coords="22,102,68,147" href="formularz_pieczurczyk.html" target="obszar_glowny">
 <area shape="rect" coords="3,160,87,190" href="poczta_pieczurczyk.html">
 <area shape="circle" coords="22,217,79,262" href="index.html" target="obszar_glowny">
 </map>
-
+<img src="mapa.png" alt="tutaj wybieraj linki" usemap="#mapa">
 </td>
 
 </tr>
