--- a/css/index2.html
+++ b/css/index2.html
@@ -38,8 +38,12 @@
                 <a href="zadanie23_piec.html" target="strony">Zadanie 23</a><br>
                 <a href="zadanie24_piec.html" target="strony">Zadanie 24</a><br>
                 <a href="zadanie25_piec.html" target="strony">Zadanie 25</a><br>
+                <a href="zadanie30_piec.html" target="strony">Zadanie 30</a><br>
                 <a href="zadanie32_piec.html" target="strony">Zadanie 32</a><br>
                 <a href="zadanie33_piec.html" target="strony">Zadanie 33</a><br>
+                <a href="zadanie34_piec.html" target="strony">Zadanie 34</a><br>
+                <a href="zadanie35_piec.html" target="strony">Zadanie 35</a><br>
+                <a href="zadanie36_piec.html" target="strony">Zadanie 36</a><br>
             </td>
             <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
             </td>
@@ -58,6 +62,8 @@
                 <a href="z22_kod.html" target="strony">Z22_kod</a><br>
                 <a href="z23_kod.html" target="strony">Z23_kod</a><br>
                 <a href="zadanie33_kod.html" target="strony">Z33_kod</a><br>
+                <a href="zadanie34_kod.html" target="strony">Z34_kod</a><br>
+                <a href="zadanie36_kod.html" target="strony">Z36_kod</a><br>
             </td>
         </tr>
     </table>
