--- a/css/zadanie34_kod.html
+++ b/css/zadanie34_kod.html
@@ -1,3 +1,5 @@
+<h2>W Html</h2>
+<textarea cols="70" rows="20">
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -57,3 +59,16 @@
 </html>
 
 <!-- Damian Pieczurczyk -->
+</textarea>
+<h2>W Css</h2>
+<textarea cols="70" rows="20">
+	h3 {
+        width: 200pt;
+        height:2.2cm;
+        padding : 20px;
+        margin-left : 75%;
+        margin-top: 20%;
+        border : 10px ridge gray;
+        background : rgb(100,100,100);
+    }
+</textarea>
