--- a/css/index2.html
+++ b/css/index2.html
@@ -44,6 +44,16 @@
                 <a href="zadanie34_piec.html" target="strony">Zadanie 34</a><br>
                 <a href="zadanie35_piec.html" target="strony">Zadanie 35</a><br>
                 <a href="zadanie36_piec.html" target="strony">Zadanie 36</a><br>
+                <a href="zadanie55_piec.html" target="strony">Zadanie 55</a><br>
+                <a href="zadanie56_piec.html" target="strony">Zadanie 56</a><br>
+                <a href="zadanie58_piec.html" target="strony">Zadanie 58</a><br>
+                <a href="zadanie59_piec.html" target="strony">Zadanie 59</a><br>
+                <a href="zadanie62_piec.html" target="strony">Zadanie 62</a><br>
+                <a href="zadanie63_piec.html" target="strony">Zadanie 63</a><br>
+                <a href="zadanie64_piec.html" target="strony">Zadanie 64</a><br>
+                <a href="zadanie65_piec.html" target="strony">Zadanie 65</a><br>
+                <a href="zadanie66_piec.html" target="strony">Zadanie 66</a><br>
+
             </td>
             <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
             </td>
@@ -64,6 +74,7 @@
                 <a href="zadanie33_kod.html" target="strony">Z33_kod</a><br>
                 <a href="zadanie34_kod.html" target="strony">Z34_kod</a><br>
                 <a href="zadanie36_kod.html" target="strony">Z36_kod</a><br>
+                <a href="zadanie62_kod.html" target="strony">Z62_kod</a><br>
             </td>
         </tr>
     </table>
