--- a/css/index2.html
+++ b/css/index2.html
@@ -53,6 +53,14 @@
                 <a href="zadanie64_piec.html" target="strony">Zadanie 64</a><br>
                 <a href="zadanie65_piec.html" target="strony">Zadanie 65</a><br>
                 <a href="zadanie66_piec.html" target="strony">Zadanie 66</a><br>
+                <a target="blank" href="zadanie91_Piec.html">zadanie 91- w nowym oknie</a><br>
+                <a target="blank" href="zadanie92_Piec.html">zadanie 92- w nowym oknie</a><br>
+                <a href="zadanie93_Piec.html" target="strony">Zadanie 93-96</a><br>
+                <a href="zadanie97_Piec.html" target="strony">Zadanie 97</a><br>
+                <a href="zadanie98_Piec.html" target="strony">Zadanie 98</a><br>
+                <a href="zadanie99_Piec.html" target="strony">Zadanie 99</a><br>
+                <a href="zadanie100_Piec.html" target="strony">Zadanie 100</a><br>
+                
 
             </td>
             <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
