--- a/css/index2.html
+++ b/css/index2.html
@@ -60,6 +60,7 @@
                 <a href="zadanie98_Piec.html" target="strony">Zadanie 98</a><br>
                 <a href="zadanie99_Piec.html" target="strony">Zadanie 99</a><br>
                 <a href="zadanie100_Piec.html" target="strony">Zadanie 100</a><br>
+                <a href="index.html" target="strony">Zadanie 104-107</a><br>
                 
 
             </td>
