--- a/javascript/index.html
+++ b/javascript/index.html
@@ -51,6 +51,46 @@ window.open("zadanie11_Piec.html","okienko_z3","toolbar=no,directories=no,menuba
                { 
 window.open("zadanie11_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
+               function WinOpen_z13()  
+               { 
+window.open("zadanie13_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z13_kod()  
+               { 
+window.open("zadanie13_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z14()  
+               { 
+window.open("zadanie14_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z14_kod()  
+               { 
+window.open("zadanie14_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z15()  
+               { 
+window.open("zadanie15_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z15_kod()  
+               { 
+window.open("zadanie15_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z16()  
+               { 
+window.open("zadanie16_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z16_kod()  
+               { 
+window.open("zadanie16_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z12()  
+               { 
+window.open("zadanie12_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
+               function WinOpen_z12_kod()  
+               { 
+window.open("zadanie12_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+               }
  
  
  
@@ -103,7 +143,19 @@ window.open("zadanie11_Piec_kod.html","okienko_z3","toolbar=no,directories=no,me
         <input type="button" name="zadanie4" value="zadanie9-Pieczurczyk" onclick="WinOpen_z9(' ')">
         <input type="button" name="zadanie4" value="zadanie10-Pieczurczyk" onclick="WinOpen_z10(' ')">
         <input type="button" name="zadanie4" value="zadanie11-Pieczurczyk" onclick="WinOpen_z11(' ')"> 
-        <input type="button" name="zadanie4" value="zadanie11-Pieczurczyk-kod" onclick="WinOpen_z11_kod(' ')"> 
+        <input type="button" name="zadanie4" value="zadanie11-kod" onclick="WinOpen_z11_kod(' ')"> 
+        <input type="button" name="zadanie12" value="zadanie12-Pieczurczyk" onclick="WinOpen_z12(' ')">
+        <input type="button" name="zadanie12" value="zadanie12-kod" onclick="WinOpen_z12_kod(' ')">
+        <input type="button" name="zadanie13" value="zadanie13-Pieczurczyk" onclick="WinOpen_z13(' ')">
+        <input type="button" name="zadanie13" value="zadanie13-kod" onclick="WinOpen_z13_kod(' ')">
+        <input type="button" name="zadanie14" value="zadanie14-Pieczurczyk" onclick="WinOpen_z14(' ')">
+        <input type="button" name="zadanie14" value="zadanie14-kod" onclick="WinOpen_z14_kod(' ')">
+        <input type="button" name="zadanie15" value="zadanie15-Pieczurczyk" onclick="WinOpen_z15(' ')">
+        <input type="button" name="zadanie15" value="zadanie15-kod" onclick="WinOpen_z15_kod(' ')">
+        <input type="button" name="zadanie16" value="zadanie16-Pieczurczyk" onclick="WinOpen_z16(' ')">
+        <input type="button" name="zadanie16" value="zadanie16-kod" onclick="WinOpen_z16_kod(' ')">
+        
+        
     </form> 
     </center>
 </body> 
