--- a/javascript/index.html
+++ b/javascript/index.html
@@ -61,11 +61,11 @@ window.open("zadanie13_Piec_kod.html","okienko_z3","toolbar=no,directories=no,me
                }
                function WinOpen_z14()  
                { 
-window.open("zadanie14_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie14_piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z14_kod()  
                { 
-window.open("zadanie14_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie14_piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z15()  
                { 
