--- a/javascript/index.html
+++ b/javascript/index.html
@@ -61,7 +61,7 @@ window.open("zadanie13_Piec_kod.html","okienko_z3","toolbar=no,directories=no,me
                }
                function WinOpen_z14()  
                { 
-window.open("javascript/zadanie14_piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie14_piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z14_kod()  
                { 
