--- a/javascript/index.html
+++ b/javascript/index.html
@@ -69,7 +69,7 @@ window.open("zadanie14_piec_kod.html","okienko_z3","toolbar=no,directories=no,me
                }
                function WinOpen_z15()  
                { 
-window.open("zadanie15_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie15_piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z15_kod()  
                { 
@@ -77,7 +77,7 @@ window.open("zadanie15_Piec_kod.html","okienko_z3","toolbar=no,directories=no,me
                }
                function WinOpen_z16()  
                { 
-window.open("zadanie16_Piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie16_piec.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z16_kod()  
                { 
