--- a/javascript/index.html
+++ b/javascript/index.html
@@ -73,7 +73,7 @@ window.open("zadanie15_piec.html","okienko_z3","toolbar=no,directories=no,menuba
                }
                function WinOpen_z15_kod()  
                { 
-window.open("zadanie15_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie15_piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z16()  
                { 
@@ -81,7 +81,7 @@ window.open("zadanie16_piec.html","okienko_z3","toolbar=no,directories=no,menuba
                }
                function WinOpen_z16_kod()  
                { 
-window.open("zadanie16_Piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie16_piec_kod.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                }
                function WinOpen_z12()  
                { 
