--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,7 +4,7 @@
           <script language="JavaScript"> 
           document.write("<center>Szkielet zaliczeniowy JavaScript Damian Pieczurczyk klasa 2P</center>".fontcolor("red").fontsize(6)+"<br>");
              function WinOpen(arg) {
-            window.open(`${arg}.html`, "okienko", "toolbar=no,directories=no,menubar=no,height=480,width=700,top=200,left=400");
+            window.open(`${arg}`, "okienko", "toolbar=no,directories=no,menubar=no,height=480,width=700,top=200,left=400");
         }
         function okno_zamknij() {
             window.close();
