--- a/javascript/index.html
+++ b/javascript/index.html
@@ -21,10 +21,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" value="zadanie1-pie" name="zadanie1" onclick="WinOpen('z1_piec.html')">
+                            <input type="button" value="zadanie1-pie" name="zadanie1" onclick="WinOpen('z1_Piec.html')">
                         </td>
                         <td>
-                            <input type="button" value="zadanie2-pie" name="zadanie2" onclick="WinOpen('z2_piec.html')">
+                            <input type="button" value="zadanie2-pie" name="zadanie2" onclick="WinOpen('z2_Piec.html')">
                         </td>
                     </tr>
                     <tr>
