--- a/javascript/index.html
+++ b/javascript/index.html
@@ -167,42 +167,42 @@
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie17 kod-pie" name="zadanie17-kod" onclick="WinOpen('z17_kod')">
+                          <input type="button" value="zadanie17 kod-pie" name="zadanie17-kod" onclick="WinOpen('zadanie17_piec_kod.html')">
                       </td>
                       <td>
-                          <input type="button" value="zadanie18 kod-pie" name="zadanie18-kod" onclick="WinOpen('z18_kod')">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <input type="button" value="zadanie19 kod-pie" name="zadanie19-kod" onclick="WinOpen('z19_kod')">
-                      </td>
-                      <td>
-                          <input type="button" value="zadanie20 kod-pie" name="zadanie20-kod" onclick="WinOpen('z20_kod')">
+                          <input type="button" value="zadanie18 kod-pie" name="zadanie18-kod" onclick="WinOpen('zadanie18_piec_kod.html')">
                       </td>
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie21 kod-pie" name="zadanie21-kod" onclick="WinOpen('z21_kod')">
+                          <input type="button" value="zadanie19 kod-pie" name="zadanie19-kod" onclick="WinOpen('zadanie19_piec_kod.html')">
                       </td>
                       <td>
-                          <input type="button" value="zadanie22 kod-pie" name="zadanie22-kod" onclick="WinOpen('z22_kod')">
-                      </td>
-                  </tr>
-                  <tr>
-                      <td>
-                          <input type="button" value="zadanie23 kod-pie" name="zadanie23-kod" onclick="WinOpen('z23_kod')">
-                      </td>
-                      <td>
-                          <input type="button" value="zadanie24 kod-pie" name="zadanie24-kod" onclick="WinOpen('z24_kod')">
+                          <input type="button" value="zadanie20 kod-pie" name="zadanie20-kod" onclick="WinOpen('zadanie20_piec_kod.html')">
                       </td>
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie25 kod-pie" name="zadanie25-kod" onclick="WinOpen('z25_kod')">
+                          <input type="button" value="zadanie21 kod-pie" name="zadanie21-kod" onclick="WinOpen('zadanie21_piec_kod.html')">
                       </td>
                       <td>
-                          <input type="button" value="zadanie26 kod-pie" name="zadanie26-kod" onclick="WinOpen('z26_kod')">
+                          <input type="button" value="zadanie22 kod-pie" name="zadanie22-kod" onclick="WinOpen('zadanie22_piec_kod.html')">
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                          <input type="button" value="zadanie23 kod-pie" name="zadanie23-kod" onclick="WinOpen('zadanie23_piec_kod.html')">
+                      </td>
+                      <td>
+                          <input type="button" value="zadanie24 kod-pie" name="zadanie24-kod" onclick="WinOpen('zadanie24_piec_kod.html')">
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                          <input type="button" value="zadanie25 kod-pie" name="zadanie25-kod" onclick="WinOpen('zadanie25_piec_kod.html')">
+                      </td>
+                      <td>
+                          <input type="button" value="zadanie26 kod-pie" name="zadanie26-kod" onclick="WinOpen('zadanie26_piec_kod.html')">
                       </td>
                   </tr>
                   <tr>
