--- a/javascript/index.html
+++ b/javascript/index.html
@@ -207,7 +207,7 @@
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie27 kod-pie" name="zadanie27-kod" onclick="WinOpen('z27_kod')">
+                          <input type="button" value="zadanie27 kod-pie" name="zadanie27-kod" onclick="WinOpen('zadanie27_piec_kod.html')">
                       </td>
                   </tr>
               </thead>
