--- a/javascript/index.html
+++ b/javascript/index.html
@@ -235,23 +235,42 @@
               background: linear-gradient(145deg, #1E40AF, #2563EB);
             }
             .buttons-group {
-            margin: auto;
-            padding-bottom: 20px;
-            background: linear-gradient(145deg, #1E40AF, #2563EB);
-            border: #210098 solid;
-            border-radius: 20px;
-            width: 80svh;
-            margin-bottom: 20px;
-        }
-        .buttons-group2 {
-            margin: auto;
-            padding-bottom: 20px;
-            background: linear-gradient(145deg, #244cd1, #2563EB);
-            border: #210098 solid;
-            border-radius: 20px;
-            width: 80svh;
-            margin-bottom: 20px;
-        }
+    margin: auto;
+    padding-bottom: 20px;
+    background: linear-gradient(145deg, #1E40AF, #2563EB);
+    border: 2px solid transparent;
+    border-radius: 20px;
+    width: 80svh;
+    margin-bottom: 20px;
+    position: relative;
+    box-shadow: 
+        0 0 5px #3700ff,
+        0 0 10px #3700ff,
+        0 0 20px #3700ff,
+        0 0 30px #3700ff,
+        0 0 40px #4d00ff,
+        0 0 50px #6100ff,
+        inset 0 0 10px #3700ff;
+}
+
+.buttons-group2 {
+    margin: auto;
+    padding-bottom: 20px;
+    background: linear-gradient(145deg, #244cd1, #2563EB);
+    border: 2px solid transparent;
+    border-radius: 20px;
+    width: 80svh;
+    margin-bottom: 20px;
+    position: relative;
+    box-shadow: 
+        0 0 5px #3700ff,
+        0 0 10px #3700ff,
+        0 0 20px #3700ff,
+        0 0 30px #3700ff,
+        0 0 40px #4d00ff,
+        0 0 50px #6100ff,
+        inset 0 0 10px #3700ff;
+}
         
           </style>
       </head> 
