--- a/javascript/index.html
+++ b/javascript/index.html
@@ -232,6 +232,7 @@
                 box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
             }
             body{
+              font-family: 'Roboto', sans-serif;
               background: linear-gradient(145deg, #1E40AF, #2563EB);
             }
             .buttons-group {
