--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,6 +1,7 @@
 <html> 
      <head> 
             <title> Pieczurczyk 2P</title> 
+          <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
           <script language="JavaScript"> 
           document.write("<center>Szkielet zaliczeniowy JavaScript Damian Pieczurczyk klasa 2P</center>".fontcolor("red").fontsize(6)+"<br>");
              function WinOpen(arg) {
