--- a/javascript/index.html
+++ b/javascript/index.html
@@ -162,6 +162,9 @@
                         <td>
                             <input type="button" value="zadanie37-pie" name="zadanie37" onclick="WinOpen('zadanie37_piec.html')">
                         </td>
+                        <td>
+                            <input type="button" value="zadanie38-pie" name="zadanie38" onclick="WinOpen('zadanie38_piec.html')">
+                        </td>
                     </tr>
                     <tr>
                         <td>
@@ -253,39 +256,39 @@
                           <input type="button" value="zadanie27 kod-pie" name="zadanie27-kod" onclick="WinOpen('zadanie27_piec_kod.html')">
                       </td>
                       <td>
-                        <input type="button" value="zadanie35 kod-pie" name="zadanie35-kod" onclick="WinOpen('zadanie28_piec_kod.html')">
+                        <input type="button" value="zadanie28 kod-pie" name="zadanie28-kod" onclick="WinOpen('zadanie28_piec_kod.html')">
                     </td>
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie27 kod-pie" name="zadanie27-kod" onclick="WinOpen('zadanie29_piec_kod.html')">
+                          <input type="button" value="zadanie29 kod-pie" name="zadanie29-kod" onclick="WinOpen('zadanie29_piec_kod.html')">
                       </td>
                       <td>
-                        <input type="button" value="zadanie35 kod-pie" name="zadanie35-kod" onclick="WinOpen('zadanie30_piec_kod.html')">
+                        <input type="button" value="zadanie30 kod-pie" name="zadanie30-kod" onclick="WinOpen('zadanie30_piec_kod.html')">
                     </td>
                   </tr>
                   <tr>
                       <td>
-                          <input type="button" value="zadanie27 kod-pie" name="zadanie27-kod" onclick="WinOpen('zadanie31_piec_kod.html')">
+                          <input type="button" value="zadanie31 kod-pie" name="zadanie31-kod" onclick="WinOpen('zadanie31_piec_kod.html')">
                       </td>
                       <td>
-                        <input type="button" value="zadanie35 kod-pie" name="zadanie35-kod" onclick="WinOpen('zadanie32_piec_kod.html')">
+                        <input type="button" value="zadanie32 kod-pie" name="zadanie32-kod" onclick="WinOpen('zadanie32_piec_kod.html')">
                     </td>
                   </tr>
                   <tr>
                     <td>
-                        <input type="button" value="zadanie36 kod-pie" name="zadanie36-kod" onclick="WinOpen('zadanie35_piec_kod.html')">
+                        <input type="button" value="zadanie35 kod-pie" name="zadanie35-kod" onclick="WinOpen('zadanie35_piec_kod.html')">
                     </td>
                     <td>
-                      <input type="button" value="zadanie37 kod-pie" name="zadanie37-kod" onclick="WinOpen('zadanie36_piec_kod.html')">
+                      <input type="button" value="zadanie36 kod-pie" name="zadanie36-kod" onclick="WinOpen('zadanie36_piec_kod.html')">
                   </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="button" value="zadanie39 kod-pie" name="zadanie39-kod" onclick="WinOpen('zadanie37_piec_kod.html')">
+                        <input type="button" value="zadanie37 kod-pie" name="zadanie37-kod" onclick="WinOpen('zadanie37_piec_kod.html')">
                     </td>
                     <td>
-                        <input type="button" value="zadanie40 kod-pie" name="zadanie40-kod" onclick="WinOpen('zadanie39_piec_kod.html')">
+                        <input type="button" value="zadanie39 kod-pie" name="zadanie39-kod" onclick="WinOpen('zadanie39_piec_kod.html')">
                     </td>
                 </tr>
                <tr>
